<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Library</string>
    <string name="action_settings">Settings</string>
    <string name="games_title">Games</string>
    <string name="new_game">New game</string>
    <string name="game_title_hint">Enter game title</string>
    <string name="game_title_label">Title</string>
    <string name="menu_item_save">Save and add another</string>
    <string name="platform_title_label">Platform</string>
    <string name="button_platform_select">Select Platforms</string>
    <string name="dialog_platform_select">Platforms</string>
    <string name="empty_platform_list">None</string>
    <string name="title_activity_list_item">ListItemActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="book_title_label">Title</string>
    <string name="book_title_hint">Enter book title</string>
    <string name="author_label">Author</string>
    <string name="author_first_name_label">First name</string>
    <string name="author_last_name_label">Last name</string>
    <string name="book_genre_label">Genre</string>
    <string name="book_format_label">Format</string>
    <string name="book_first_name_hint">First name</string>
    <string name="book_last_name_hint">Last name</string>
    <string name="menu_item_filter_games">Filter by platform</string>

</resources>
